@@ -23,7 +23,9 @@ public class TestValueInstantiator extends BaseMapTest
     {
         String _secret;
 
-        public MyBean(String s, boolean bogus) {
+        // 20-Sep-2017, tatu: Must NOT be public for 3.x because we do auto-detect
+        //   public ctors....
+        protected MyBean(String s, boolean bogus) {
             _secret = s;
         }
     }
@@ -116,9 +118,9 @@ public class TestValueInstantiator extends BaseMapTest
         public boolean canCreateFromObjectWith() { return true; }
         
         @Override
-        public CreatorProperty[] getFromObjectArguments(DeserializationConfig config) {
+        public CreatorProperty[] getFromObjectArguments(DeserializationContext ctxt) {
             return  new CreatorProperty[] {
-                    new CreatorProperty(new PropertyName("type"), config.constructType(Class.class), null,
+                    new CreatorProperty(new PropertyName("type"), ctxt.constructType(Class.class), null,
                             null, null, null, 0, null,
                             PropertyMetadata.STD_REQUIRED)
             };
@@ -128,7 +130,7 @@ public class TestValueInstantiator extends BaseMapTest
         public Object createFromObjectWith(DeserializationContext ctxt, Object[] args) {
             try {
                 Class<?> cls = (Class<?>) args[0];
-                return cls.newInstance();
+                return cls.getDeclaredConstructor().newInstance();
             } catch (Exception e) {
                 throw new RuntimeException(e);
             }
@@ -146,9 +148,9 @@ public class TestValueInstantiator extends BaseMapTest
         public boolean canCreateFromObjectWith() { return true; }
 
         @Override
-        public CreatorProperty[] getFromObjectArguments(DeserializationConfig config) {
+        public CreatorProperty[] getFromObjectArguments(DeserializationContext ctxt) {
             return  new CreatorProperty[] {
-                    new CreatorProperty(new PropertyName("name"), config.constructType(String.class), null,
+                    new CreatorProperty(new PropertyName("name"), ctxt.constructType(String.class), null,
                             null, null, null, 0, null,
                             PropertyMetadata.STD_REQUIRED)
             };
@@ -341,8 +343,9 @@ public class TestValueInstantiator extends BaseMapTest
     
     public void testCustomBeanInstantiator() throws Exception
     {
-        ObjectMapper mapper = new ObjectMapper();
-        mapper.registerModule(new MyModule(MyBean.class, new MyBeanInstantiator()));
+        ObjectMapper mapper = jsonMapperBuilder()
+                .addModule(new MyModule(MyBean.class, new MyBeanInstantiator()))
+                .build();
         MyBean bean = mapper.readValue("{}", MyBean.class);
         assertNotNull(bean);
         assertEquals("secret!", bean._secret);
@@ -350,8 +353,9 @@ public class TestValueInstantiator extends BaseMapTest
 
     public void testCustomListInstantiator() throws Exception
     {
-        ObjectMapper mapper = new ObjectMapper();
-        mapper.registerModule(new MyModule(MyList.class, new MyListInstantiator()));
+        ObjectMapper mapper = jsonMapperBuilder()
+                .addModule(new MyModule(MyList.class, new MyListInstantiator()))
+                .build();
         MyList result = mapper.readValue("[]", MyList.class);
         assertNotNull(result);
         assertEquals(MyList.class, result.getClass());
@@ -360,8 +364,9 @@ public class TestValueInstantiator extends BaseMapTest
 
     public void testCustomMapInstantiator() throws Exception
     {
-        ObjectMapper mapper = new ObjectMapper();
-        mapper.registerModule(new MyModule(MyMap.class, new MyMapInstantiator()));
+        ObjectMapper mapper = jsonMapperBuilder()
+                .addModule(new MyModule(MyMap.class, new MyMapInstantiator()))
+                .build();
         MyMap result = mapper.readValue("{ \"a\":\"b\" }", MyMap.class);
         assertNotNull(result);
         assertEquals(MyMap.class, result.getClass());
@@ -376,8 +381,9 @@ public class TestValueInstantiator extends BaseMapTest
 
     public void testDelegateBeanInstantiator() throws Exception
     {
-        ObjectMapper mapper = new ObjectMapper();
-        mapper.registerModule(new MyModule(MyBean.class, new MyDelegateBeanInstantiator()));
+        ObjectMapper mapper = jsonMapperBuilder()
+                .addModule(new MyModule(MyBean.class, new MyDelegateBeanInstantiator()))
+                .build();
         MyBean bean = mapper.readValue("123", MyBean.class);
         assertNotNull(bean);
         assertEquals("123", bean._secret);
@@ -385,8 +391,9 @@ public class TestValueInstantiator extends BaseMapTest
 
     public void testDelegateListInstantiator() throws Exception
     {
-        ObjectMapper mapper = new ObjectMapper();
-        mapper.registerModule(new MyModule(MyList.class, new MyDelegateListInstantiator()));
+        ObjectMapper mapper = jsonMapperBuilder()
+                .addModule(new MyModule(MyList.class, new MyDelegateListInstantiator()))
+                .build();
         MyList result = mapper.readValue("123", MyList.class);
         assertNotNull(result);
         assertEquals(1, result.size());
@@ -395,8 +402,9 @@ public class TestValueInstantiator extends BaseMapTest
     
     public void testDelegateMapInstantiator() throws Exception
     {
-        ObjectMapper mapper = new ObjectMapper();
-        mapper.registerModule(new MyModule(MyMap.class, new MyDelegateMapInstantiator()));
+        ObjectMapper mapper = jsonMapperBuilder()
+                .addModule(new MyModule(MyMap.class, new MyDelegateMapInstantiator()))
+                .build();
         MyMap result = mapper.readValue("123", MyMap.class);
         assertNotNull(result);
         assertEquals(1, result.size());
@@ -420,16 +428,16 @@ public class TestValueInstantiator extends BaseMapTest
 
     public void testPropertyBasedBeanInstantiator() throws Exception
     {
-        ObjectMapper mapper = new ObjectMapper();
-        mapper.registerModule(new MyModule(CreatorBean.class,
+        ObjectMapper mapper = jsonMapperBuilder()
+                .addModule(new MyModule(CreatorBean.class,
                 new InstantiatorBase() {
                     @Override
                     public boolean canCreateFromObjectWith() { return true; }
         
                     @Override
-                    public CreatorProperty[] getFromObjectArguments(DeserializationConfig config) {
+                    public CreatorProperty[] getFromObjectArguments(DeserializationContext ctxt) {
                         return  new CreatorProperty[] {
-                                new CreatorProperty(new PropertyName("secret"), config.constructType(String.class), null,
+                                new CreatorProperty(new PropertyName("secret"), ctxt.constructType(String.class), null,
                                         null, null, null, 0, null,
                                         PropertyMetadata.STD_REQUIRED)
                         };
@@ -439,7 +447,8 @@ public class TestValueInstantiator extends BaseMapTest
                     public Object createFromObjectWith(DeserializationContext ctxt, Object[] args) {
                         return new CreatorBean((String) args[0]);
                     }
-        }));
+                }))
+                .build();
         CreatorBean bean = mapper.readValue("{\"secret\":123,\"value\":37}", CreatorBean.class);
         assertNotNull(bean);
         assertEquals("123", bean._secret);
@@ -447,8 +456,9 @@ public class TestValueInstantiator extends BaseMapTest
 
     public void testPropertyBasedMapInstantiator() throws Exception
     {
-        ObjectMapper mapper = new ObjectMapper();
-        mapper.registerModule(new MyModule(MyMap.class, new CreatorMapInstantiator()));
+        ObjectMapper mapper = jsonMapperBuilder()
+                .addModule(new MyModule(MyMap.class, new CreatorMapInstantiator()))
+                .build();
         MyMap result = mapper.readValue("{\"name\":\"bob\", \"x\":\"y\"}", MyMap.class);
         assertNotNull(result);
         assertEquals(2, result.size());
@@ -464,8 +474,8 @@ public class TestValueInstantiator extends BaseMapTest
 
     public void testBeanFromString() throws Exception
     {
-        ObjectMapper mapper = new ObjectMapper();
-        mapper.registerModule(new MyModule(MysteryBean.class,
+        ObjectMapper mapper = jsonMapperBuilder()
+                .addModule(new MyModule(MysteryBean.class,
                 new InstantiatorBase() {
                     @Override
                     public boolean canCreateFromString() { return true; }
@@ -474,7 +484,8 @@ public class TestValueInstantiator extends BaseMapTest
                     public Object createFromString(DeserializationContext ctxt, String value) {
                         return new MysteryBean(value);
                     }
-        }));
+                }))
+                .build();
         MysteryBean result = mapper.readValue(quote("abc"), MysteryBean.class);
         assertNotNull(result);
         assertEquals("abc", result.value);
@@ -482,8 +493,8 @@ public class TestValueInstantiator extends BaseMapTest
 
     public void testBeanFromInt() throws Exception
     {
-        ObjectMapper mapper = new ObjectMapper();
-        mapper.registerModule(new MyModule(MysteryBean.class,
+        ObjectMapper mapper = jsonMapperBuilder()
+                .addModule(new MyModule(MysteryBean.class,
                 new InstantiatorBase() {
                     @Override
                     public boolean canCreateFromInt() { return true; }
@@ -492,7 +503,8 @@ public class TestValueInstantiator extends BaseMapTest
                     public Object createFromInt(DeserializationContext ctxt, int value) {
                         return new MysteryBean(value+1);
                     }
-        }));
+                }))
+                .build();
         MysteryBean result = mapper.readValue("37", MysteryBean.class);
         assertNotNull(result);
         assertEquals(Integer.valueOf(38), result.value);
@@ -500,8 +512,8 @@ public class TestValueInstantiator extends BaseMapTest
 
     public void testBeanFromLong() throws Exception
     {
-        ObjectMapper mapper = new ObjectMapper();
-        mapper.registerModule(new MyModule(MysteryBean.class,
+        ObjectMapper mapper = jsonMapperBuilder()
+                .addModule(new MyModule(MysteryBean.class,
                 new InstantiatorBase() {
                     @Override
                     public boolean canCreateFromLong() { return true; }
@@ -510,7 +522,8 @@ public class TestValueInstantiator extends BaseMapTest
                     public Object createFromLong(DeserializationContext ctxt, long value) {
                         return new MysteryBean(value+1L);
                     }
-        }));
+                }))
+                .build();
         MysteryBean result = mapper.readValue("9876543210", MysteryBean.class);
         assertNotNull(result);
         assertEquals(Long.valueOf(9876543211L), result.value);
@@ -518,8 +531,8 @@ public class TestValueInstantiator extends BaseMapTest
 
     public void testBeanFromDouble() throws Exception
     {
-        ObjectMapper mapper = new ObjectMapper();
-        mapper.registerModule(new MyModule(MysteryBean.class,
+        ObjectMapper mapper = jsonMapperBuilder()
+                .addModule(new MyModule(MysteryBean.class,
                 new InstantiatorBase() {
                     @Override
                     public boolean canCreateFromDouble() { return true; }
@@ -528,7 +541,8 @@ public class TestValueInstantiator extends BaseMapTest
                     public Object createFromDouble(DeserializationContext ctxt, double value) {
                         return new MysteryBean(2.0 * value);
                     }
-        }));
+                }))
+                .build();
         MysteryBean result = mapper.readValue("0.25", MysteryBean.class);
         assertNotNull(result);
         assertEquals(Double.valueOf(0.5), result.value);
@@ -536,8 +550,8 @@ public class TestValueInstantiator extends BaseMapTest
 
     public void testBeanFromBoolean() throws Exception
     {
-        ObjectMapper mapper = new ObjectMapper();
-        mapper.registerModule(new MyModule(MysteryBean.class,
+        ObjectMapper mapper = jsonMapperBuilder()
+                .addModule(new MyModule(MysteryBean.class,
                 new InstantiatorBase() {
                     @Override
                     public boolean canCreateFromBoolean() { return true; }
@@ -546,7 +560,8 @@ public class TestValueInstantiator extends BaseMapTest
                     public Object createFromBoolean(DeserializationContext ctxt, boolean value) {
                         return new MysteryBean(Boolean.valueOf(value));
                     }
-        }));
+                }))
+                .build();
         MysteryBean result = mapper.readValue("true", MysteryBean.class);
         assertNotNull(result);
         assertEquals(Boolean.TRUE, result.value);
@@ -564,8 +579,9 @@ public class TestValueInstantiator extends BaseMapTest
      */
     public void testPolymorphicCreatorBean() throws Exception
     {
-        ObjectMapper mapper = new ObjectMapper();
-        mapper.registerModule(new MyModule(PolymorphicBeanBase.class, new PolymorphicBeanInstantiator()));
+        ObjectMapper mapper = jsonMapperBuilder()
+                .addModule(new MyModule(PolymorphicBeanBase.class, new PolymorphicBeanInstantiator()))
+                .build();
         String JSON = "{\"type\":"+quote(PolymorphicBean.class.getName())+",\"name\":\"Axel\"}";
         PolymorphicBeanBase result = mapper.readValue(JSON, PolymorphicBeanBase.class);
         assertNotNull(result);
@@ -581,7 +597,6 @@ public class TestValueInstantiator extends BaseMapTest
         assertEquals(3, bean.b);
     }
 
-    // @since 2.8
     public void testErrorMessageForMissingCtor() throws Exception
     {
         // first fail, check message from JSON Object (no default ctor)
@@ -596,7 +611,6 @@ public class TestValueInstantiator extends BaseMapTest
         }
     }
 
-    // @since 2.8
     public void testErrorMessageForMissingStringCtor() throws Exception
     {
         // then from JSON String
