@@ -2,8 +2,6 @@ package com.fasterxml.jackson.databind.jsontype.deftyping;
 
 import java.util.*;
 
-import static org.junit.Assert.*;
-
 import com.fasterxml.jackson.annotation.JsonTypeInfo;
 import com.fasterxml.jackson.databind.*;
 import com.fasterxml.jackson.databind.jsontype.impl.StdTypeResolverBuilder;
@@ -17,7 +15,7 @@ public class TestDefaultForScalars
 {
     static class Jackson417Bean {
         public String foo = "bar";
-        public java.io.Serializable bar = new Integer(13);
+        public java.io.Serializable bar = Integer.valueOf(13);
     }
 
     // [databind#1395]: prevent attempts at including type info for primitives
@@ -25,12 +23,28 @@ public class TestDefaultForScalars
         public long key;
     }
 
+    // Basic `ObjectWrapper` from base uses delegating ctor, won't work well; should
+    // figure out why, but until then we'll use separate impl
+    protected static class ObjectWrapperForPoly {
+        Object object;
+
+        protected ObjectWrapperForPoly() { }
+        public ObjectWrapperForPoly(final Object o) {
+            object = o;
+        }
+        public Object getObject() { return object; }
+    }
+
     /*
-    /**********************************************************
+    /**********************************************************************
     /* Test methods
-    /**********************************************************
+    /**********************************************************************
      */
-    
+
+    private final ObjectMapper DEFAULT_TYPING_MAPPER = jsonMapperBuilder()
+                    .enableDefaultTyping()
+                    .build();
+
     /**
      * Unit test to verify that limited number of core types do NOT include
      * type information, even if declared as Object. This is only done for types
@@ -39,32 +53,26 @@ public class TestDefaultForScalars
      */
     public void testNumericScalars() throws Exception
     {
-        ObjectMapper m = new ObjectMapper();
-        m.enableDefaultTyping();
-
         // no typing for Integer, Double, yes for others
-        assertEquals("[123]", m.writeValueAsString(new Object[] { Integer.valueOf(123) }));
-        assertEquals("[[\"java.lang.Long\",37]]", m.writeValueAsString(new Object[] { Long.valueOf(37) }));
-        assertEquals("[0.25]", m.writeValueAsString(new Object[] { Double.valueOf(0.25) }));
-        assertEquals("[[\"java.lang.Float\",0.5]]", m.writeValueAsString(new Object[] { Float.valueOf(0.5f) }));
+        assertEquals("[123]", DEFAULT_TYPING_MAPPER.writeValueAsString(new Object[] { Integer.valueOf(123) }));
+        assertEquals("[[\"java.lang.Long\",37]]", DEFAULT_TYPING_MAPPER.writeValueAsString(new Object[] { Long.valueOf(37) }));
+        assertEquals("[0.25]", DEFAULT_TYPING_MAPPER.writeValueAsString(new Object[] { Double.valueOf(0.25) }));
+        assertEquals("[[\"java.lang.Float\",0.5]]", DEFAULT_TYPING_MAPPER.writeValueAsString(new Object[] { Float.valueOf(0.5f) }));
     }
 
     public void testDateScalars() throws Exception
     {
-        ObjectMapper m = new ObjectMapper();
-        m.enableDefaultTyping();
-
         long ts = 12345678L;
         assertEquals("[[\"java.util.Date\","+ts+"]]",
-                m.writeValueAsString(new Object[] { new Date(ts) }));
+                DEFAULT_TYPING_MAPPER.writeValueAsString(new Object[] { new Date(ts) }));
 
         // Calendar is trickier... hmmh. Need to ensure round-tripping
         Calendar c = Calendar.getInstance();
         c.setTimeInMillis(ts);
-        String json = m.writeValueAsString(new Object[] { c });
+        String json = DEFAULT_TYPING_MAPPER.writeValueAsString(new Object[] { c });
         assertEquals("[[\""+c.getClass().getName()+"\","+ts+"]]", json);
         // and let's make sure it also comes back same way:
-        Object[] result = m.readValue(json, Object[].class);
+        Object[] result = DEFAULT_TYPING_MAPPER.readValue(json, Object[].class);
         assertEquals(1, result.length);
         assertTrue(result[0] instanceof Calendar);
         assertEquals(ts, ((Calendar) result[0]).getTimeInMillis());
@@ -72,12 +80,9 @@ public class TestDefaultForScalars
 
     public void testMiscScalars() throws Exception
     {
-        ObjectMapper m = new ObjectMapper();
-        m.enableDefaultTyping();
-
         // no typing for Strings, booleans
-        assertEquals("[\"abc\"]", m.writeValueAsString(new Object[] { "abc" }));
-        assertEquals("[true,null,false]", m.writeValueAsString(new Boolean[] { true, null, false }));
+        assertEquals("[\"abc\"]", DEFAULT_TYPING_MAPPER.writeValueAsString(new Object[] { "abc" }));
+        assertEquals("[true,null,false]", DEFAULT_TYPING_MAPPER.writeValueAsString(new Boolean[] { true, null, false }));
     }
 
     /**
@@ -86,26 +91,26 @@ public class TestDefaultForScalars
      */
     public void testScalarArrays() throws Exception
     {
-        ObjectMapper m = new ObjectMapper();
-        m.enableDefaultTyping(ObjectMapper.DefaultTyping.JAVA_LANG_OBJECT);
+        ObjectMapper mapper = jsonMapperBuilder()
+                .enableDefaultTyping(DefaultTyping.JAVA_LANG_OBJECT)
+                .build();
         Object[] input = new Object[] {
                 "abc", new Date(1234567), null, Integer.valueOf(456)
         };
-        String json = m.writeValueAsString(input);
+        String json = mapper.writeValueAsString(input);
         assertEquals("[\"abc\",[\"java.util.Date\",1234567],null,456]", json);
 
         // and should deserialize back as well:
-        Object[] output = m.readValue(json, Object[].class);
+        Object[] output = mapper.readValue(json, Object[].class);
         assertArrayEquals(input, output);
     }
 
+    // Loosely scalar
     public void test417() throws Exception
     {
-        ObjectMapper m = new ObjectMapper();
-        m.enableDefaultTyping();
         Jackson417Bean input = new Jackson417Bean();
-        String json = m.writeValueAsString(input);
-        Jackson417Bean result = m.readValue(json, Jackson417Bean.class);
+        String json = DEFAULT_TYPING_MAPPER.writeValueAsString(input);
+        Jackson417Bean result = DEFAULT_TYPING_MAPPER.readValue(json, Jackson417Bean.class);
         assertEquals(input.foo, result.foo);
         assertEquals(input.bar, result.bar);
     }
@@ -120,13 +125,12 @@ public class TestDefaultForScalars
         mapData.put("longAsField", data);
 
         // Configure Jackson to preserve types
-        ObjectMapper mapper = new ObjectMapper();
-        StdTypeResolverBuilder resolver = new StdTypeResolverBuilder();
-        resolver.init(JsonTypeInfo.Id.CLASS, null);
-        resolver.inclusion(JsonTypeInfo.As.PROPERTY);
-        resolver.typeProperty("__t");
-        mapper.setDefaultTyping(resolver);
-        mapper.enable(SerializationFeature.INDENT_OUTPUT);
+        StdTypeResolverBuilder resolver = new StdTypeResolverBuilder(JsonTypeInfo.Id.CLASS,
+                JsonTypeInfo.As.PROPERTY, "__t");
+        ObjectMapper mapper = jsonMapperBuilder()
+                .enable(SerializationFeature.INDENT_OUTPUT)
+                .setDefaultTyping(resolver)
+                .build();
 
         // Serialize
         String json = mapper.writeValueAsString(mapData);
@@ -135,5 +139,16 @@ public class TestDefaultForScalars
         Map<?,?> result = mapper.readValue(json, Map.class);
         assertNotNull(result);
         assertEquals(2, result.size());
+    }
+
+    // [databind#2236]: do need type info for NaN
+    public void testDefaultTypingWithNaN() throws Exception
+    {
+        final ObjectWrapperForPoly INPUT = new ObjectWrapperForPoly(Double.POSITIVE_INFINITY);
+        final String json = DEFAULT_TYPING_MAPPER.writeValueAsString(INPUT);
+        final ObjectWrapperForPoly result = DEFAULT_TYPING_MAPPER.readValue(json, ObjectWrapperForPoly.class);
+        assertEquals(Double.class, result.getObject().getClass());
+        assertEquals(INPUT.getObject().toString(), result.getObject().toString());
+        assertTrue(((Double) result.getObject()).isInfinite());
     }
 }
